@@ -1,5 +1,9 @@
 = Changelog
 
+* Deployment
+  ** Default location of configuration was moved from `/etc/mensam/mensam.json` to `/etc/mensam/configuration.json` for the Docker image.
+  ** NixOS is now also using `/etc/mensam/configuration.json` to link the generated configuration.
+
 == `0.15.1.0`
 
 * Deployment
